--- a/app/src/main/res/layout/activity_configuration_listview.xml
+++ b/app/src/main/res/layout/activity_configuration_listview.xml
@@ -6,10 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".activities.EditTeamsActivity">
 
+    <TextView
+        android:id="@+id/listViewHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        />
+
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/listViewHeader"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addFAB"
