finalized tagging logic and fixed navigatiopn flow in the app

--- a/app/src/main/res/layout/layout_following_event_recyclerview_dialog.xml
+++ b/app/src/main/res/layout/layout_following_event_recyclerview_dialog.xml
@@ -19,6 +19,7 @@
             android:layout_height="?attr/actionBarSize"
             android:paddingStart="6dp"
             android:paddingEnd="16dp"
+            app:title="@string/followUpEvent"
             app:contentInsetStartWithNavigation="0dp"
             app:navigationIcon="@drawable/ic_baseline_close_24" />
 
