--- a/app/src/main/res/menu/followup_event_dialog.xml
+++ b/app/src/main/res/menu/followup_event_dialog.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_save"
-        android:title="@string/followUpSaveActionTxt"
+        android:title="@string/save"
         app:showAsAction="ifRoom" />
 </menu>
