--- a/app/src/main/res/layout/activity_configuration_listview.xml
+++ b/app/src/main/res/layout/activity_configuration_listview.xml
@@ -34,4 +34,7 @@
         android:layout_margin="16dp"
         android:src="@drawable/ic_baseline_add_24"
         android:contentDescription="@string/addFAB_text" />
+
+    <include layout="@layout/layout_expandable_add_button"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
