--- a/app/src/main/res/layout/layout_expandable_add_button.xml
+++ b/app/src/main/res/layout/layout_expandable_add_button.xml
@@ -10,7 +10,8 @@
     android:paddingLeft="@dimen/fab_margin"
     android:paddingRight="@dimen/fab_margin"
     android:paddingTop="@dimen/fab_margin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="gone">
 
     <LinearLayout
         android:id="@+id/layoutFabAddEventType"
