--- a/app/src/main/res/layout/layout_expandable_recyclerview_parent.xml
+++ b/app/src/main/res/layout/layout_expandable_recyclerview_parent.xml
@@ -38,7 +38,7 @@
                 android:contentDescription="@string/expand_icon" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+                android:id="@+id/eventTypesRecyclerView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
