--- a/app/src/main/res/layout/activity_configuration_listview.xml
+++ b/app/src/main/res/layout/activity_configuration_listview.xml
@@ -22,8 +22,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/listViewHeader"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:paddingBottom="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/listViewHeader" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addFAB"
