--- a/app/src/main/res/layout/layout_list_view_long_timed_event_type.xml
+++ b/app/src/main/res/layout/layout_list_view_long_timed_event_type.xml
@@ -25,7 +25,7 @@
         app:layout_constraintEnd_toEndOf="@id/eventATitleTextView"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/swap_image"
-        app:tint="@color/black"
+        app:tint="@color/icon_color_on_surface"
         />
 
     <TextView
