created lists for filtering events by type, attributes or players

--- a/sport_video_tagging_player/src/app/App.css
+++ b/sport_video_tagging_player/src/app/App.css
@@ -1,4 +1,9 @@
 .sub-header  {
-    font-size: 18px;
+    font-size: 20px;
     margin: 0 0 16px 0;
+}
+
+#reset-filter-button {
+    background-color: red;
+    color: white;
 }
