--- a/sports_video_tagging/app/src/main/res/layout/layout_list_view_event_type_row.xml
+++ b/sports_video_tagging/app/src/main/res/layout/layout_list_view_event_type_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
@@ -14,26 +15,6 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <CheckBox
-        android:id="@+id/activeEventTypeCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/activeCheckboxLbl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:text="@string/active"
-        app:layout_constraintBottom_toBottomOf="@+id/activeEventTypeCheckBox"
-        app:layout_constraintEnd_toStartOf="@+id/activeEventTypeCheckBox"
-        app:layout_constraintTop_toTopOf="@+id/activeEventTypeCheckBox" />
 
     <TextView
         android:id="@+id/timeOffsetTextView"
