--- a/sports_video_tagging/app/src/main/res/layout/layout_tagged_match_listitem.xml
+++ b/sports_video_tagging/app/src/main/res/layout/layout_tagged_match_listitem.xml
@@ -54,7 +54,7 @@
                 app:layout_constraintTop_toBottomOf="@id/homeTeamNameTextView" />
 
             <TextView
-                android:id="@+id/awayTeamNameTextView"
+                android:id="@+id/guestTeamNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -63,14 +63,14 @@
                 app:layout_constraintTop_toBottomOf="@id/minusSign" />
 
             <TextView
-                android:id="@+id/awayTeamScoreTextView"
+                android:id="@+id/guestTeamScoreTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/awayTeamNameTextView"
+                app:layout_constraintBottom_toBottomOf="@id/guestTeamNameTextView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/awayTeamNameTextView" />
+                app:layout_constraintTop_toTopOf="@id/guestTeamNameTextView" />
 
             <TextView
                 android:id="@+id/numberOfTagsTextView"
@@ -78,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/awayTeamScoreTextView" />
+                app:layout_constraintTop_toBottomOf="@id/guestTeamScoreTextView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
